Header, bignews section

--- a/code/index.html
+++ b/code/index.html
@@ -5,32 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Roboto&display=swap" rel="stylesheet">    
   </head>
   <body>
-    <header> <!-- Some kind of logo and navbar -->
+    <header> <!-- Logo and navbar -->
+     
+      <img src="images/vintage-1064142_640.png" class="logo-image" alt="Logo image">
+      <h1>TRAVEL NEWS</h1>
       <nav>
-        <img src="" class="logo-image" alt="BLABLA">
-
-        <ul>
-          <li>Products</li>
-          <li>About</li>
-          <li>Contact</li>
-          <li>Internal</li>
-
-        </ul>
-
+        <a href="#">NEW</a>
+        <a href="#">BOOKINGS</a>
+        <a href="#">CONTACT</a>
       </nav>
-
-
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="big-news"> <!-- The big news content -->
+      <div>
+        <img src="images/river-5662293_640.jpg" alt="River image">
+      </div>
+      <div class="big-news-text">
+        <h2>Next adventure</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime iure 
+          libero illum mollitia sapiente! Eum, pariatur tenetur? </p>
+      </div>
+
+
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class=""> <!-- The other news  -->
+      
     </section>
   </body>
 </html>
