added media breakpoints & placeholder flex layout

--- a/code/index.html
+++ b/code/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
@@ -12,7 +13,10 @@
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <img src="https://source.unsplash.com/daily/?/" alt="" />
+      <img src="https://source.unsplash.com/daily/?1/" alt="" />
+      <img src="https://source.unsplash.com/daily/?2/" alt="" />
+      <img src="https://source.unsplash.com/daily/?3/" alt="" />
     </section>
 
     <section class="">
