--- a/code/index.html
+++ b/code/index.html
@@ -2,26 +2,22 @@
 <html lang ="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">     <!-- dont forget the meta tag for responsiveness -->
-    <title>Project 2: The News Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ALVA</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
       <img class="logo" src="#">
-      <nav></nav> <!--Navbar -->
+      <nav></nav> <!-- Navbar -->
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
-      <!-- Two divs; one for the image and one for the text to the image-->
-      <div class="big-news-image"></div> <!-- should the images be in div or just use <img>? -->
+      <img class="big-news-image" src="#"> 
       <div class="big-news-text"></div>
     </section>
 
     <section class="other-news">
-      <!-- The other news  -->
       <div class="other-news-image"></div>
       <div class="other-news-image"></div>
       <div class="other-news-image"></div>
