Footer created and styled

--- a/code/index.html
+++ b/code/index.html
@@ -99,7 +99,11 @@
                   </div>
           </section>
 
-            <footer></footer>
+          <!--Footer-->
+
+          <div class="footer">
+            <footer> Copyright &copy; 2021 jokesaside.com. Created by Irina Jekabsone - Technigo Bootcamp.</footer>
+          </div>
 
       </div>
   </body>
