tried varied styles to header, cant't line break headline

--- a/code/index.html
+++ b/code/index.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
-  <div class="header-flexcontainer">
-    <header>
+  <div class="main-container">
+    <header class="head-container">
+      <img src="logo.svg" alt="Technigo logo" width="100" height="100">
+      <br><p class="tagline">nyheterna mainstream missar</p>
       <!-- Some kind of logo and navbar -->
     </header>
   </div>
-  <div class="big-section-flexcontainer">
+  <div class="big-news-flexcontainer">
     <section class="big-news">
       <!-- The big news content -->
     </section>
