added some pictures >& made sure all were responsive and aligned

--- a/code/index.html
+++ b/code/index.html
@@ -11,10 +11,10 @@
 <body>
   <header>
     <nav>
-        <a href="contact.html" target="blank">contact</a>
-        <a href="contact.html" target="blank">about</a>
-        <a href="contact.html" target="blank">sign up</a>
-        <a href="contact.html" target="blank">login</a>
+      <a href="contact.html" target="blank">contact</a>
+      <a href="contact.html" target="blank">about</a>
+      <a href="contact.html" target="blank">sign up</a>
+      <a href="contact.html" target="blank">login</a>
       <div class="searchbar">
         <input type="text" placeholder="Search..">
         <button class="search-button"><img src="../pictures/magnify.png"></button>
@@ -28,7 +28,7 @@
 
   <section class="big-news">
     <container class="image-container">
-      <img src="../pictures/SLSmegarocket.jpg">
+      <img src="../pictures/astronaut.jpg">
     </container>
     <container class="text-container">
       <h2>TOP NEWS</h2>
@@ -72,7 +72,7 @@
       </div>
       <div class="block">
         <container class="image-container">
-          <img src="../ISS.jpg">
+          <img src="../pictures/nicholaspatrick.jpg">
         </container>
       </div>
       <div class="block">
@@ -85,7 +85,7 @@
       </div>
       <div class="block">
         <container class="image-container">
-          <img src="../ISS.jpg">
+          <img src="../pictures/shuttle.jpg">
         </container>
       </div>
       <div class="block">
@@ -98,7 +98,7 @@
       </div>
       <div class="block">
         <container class="image-container">
-          <img src="../ISS.jpg">
+          <img src="../pictures/spiral.jpg">
         </container>
       </div>
       <div class="block">
@@ -111,7 +111,7 @@
       </div>
       <div class="block">
         <container class="image-container">
-          <img src="../ISS.jpg">
+          <img src="../pictures/tracycaldwell.jpg">
         </container>
       </div>
       <div class="block">
@@ -150,7 +150,7 @@
       </div>
       <div class="block">
         <container class="image-container">
-          <img src="../ISS.jpg">
+          <img src="../pictures/sun.jpg">
         </container>
       </div>
       <div class="block">
@@ -176,7 +176,7 @@
       </div>
       <div class="block">
         <container class="image-container">
-          <img src="../ISS.jpg">
+          <img src="../pictures/ISS640px.jpg">
         </container>
       </div>
       <div class="block">
@@ -202,6 +202,17 @@
       </div>
     </container>
   </section>
+
+  <footer>
+    <container class="footer-container">
+      <div class="text-container">
+        <p>&copy; Pauline Andersson 2021</p>
+      </div>
+      <div class="image-container">
+        <img src="../pictures/logo.svg">
+      </div>
+    </container>
+  </footer>
 </body>
 
 </html>
