--- a/code/index.html
+++ b/code/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Dev News</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
