--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>World News by Ekaterina Klimenko</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <!-- Logo, hamburger menu and navbar -->
+      <img src="./logo.svg" alt="Logo">
+      <nav>
+        <a href="">Home</a> |
+        <a href="">Highlights</a> |
+        <a href="">News</a> |
+        <a href="">More</a> |
+      </nav>
+
     </header>
 
     <section class="big-news">
