--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@0;1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <img src="http://clipart-library.com/data_images/192383.jpg" alt="">
+    <h1>News Site</h1>
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </header>
+
+  <section class="big-news">
+    <figure>
+      <img src="rock.jpg" alt="">
+      <figcaption>A rock</figcaption>
+    </figure>
+    <div class="big-news-text">
+      <h2>Big news headline</h2>
+      <article>
+        Read more...
+      </article>
+    </div>
+  </section>
+
+  <section class="small-news">
+    <div>
+      <img src="rock.jpg" alt="">
+      <h3>Small news headline</h3>
+    </div>
+    <div>
+      <img src="rock.jpg" alt="">
+      <h3>Small news headline</h3>
+    </div>
+    <div>
+      <img src="rock.jpg" alt="">
+      <h3>Small news headline</h3>
+    </div>
+  </section>
+</body>
+
 </html>
