Added styling to header, mobile phone

--- a/code/index.html
+++ b/code/index.html
@@ -4,14 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ALVA</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <header>
         <img class="logo" src="#" alt="Alva logo"> <!-- add img src -->
         <p>ALVA</p>
-        <nav> <!-- make sure that the nav bar isn't showing in phone mode, e.g. put a display: none; in CSS (not under media query section) -->
+        <nav> 
             <a href="#">ABOUT</a>
             <a href="#">ARCHIVE</a>
             <a href="#">CONTACT</a>
