fixing the grid

--- a/code/index.html
+++ b/code/index.html
@@ -27,10 +27,10 @@
   </header>
 
   <section class="big-news">
-    <container class="image-container">
+    <container class="big-img-container">
       <img src="../pictures/astronaut.jpg">
     </container>
-    <container class="text-container">
+    <container class="big-text-container">
       <h2>TOP NEWS</h2>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut eligendi,
         rerum placeat, quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi minima!
@@ -43,172 +43,174 @@
   </section>
 
   <section class="small-news">
-    <container class="small-news-grid">
-      <div class="block">
-        <container class="image-container">
-          <img src="../pictures/SLSmegarocket.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>NASA test-fires SLS engines</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
-            <a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../pictures/WilliamThornton.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>Astronaut William Thornton dead</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
-            <a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../pictures/nicholaspatrick.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>Small news</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-            eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../pictures/shuttle.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>Small news</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-            eligendi, rerum placeat <br><a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../pictures/spiral.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>Small news</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-            eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../pictures/tracycaldwell.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>Small news</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-            eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../pictures/SLSmegarocket.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>NASA test-fires SLS engines</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
-            <a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../pictures/WilliamThornton.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>Astronaut William Thornton dead</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
-            <a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../pictures/sun.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>Small news</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-            eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../ISS.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>Small news</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-            eligendi, rerum placeat <br><a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../pictures/ISS640px.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>Small news</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-            eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../ISS.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>Small news</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-            eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
-          </p>
-        </container>
-      </div>
+    <div class="grid-container">
+      <container class="small-img-container">
+        <img src="../pictures/SLSmegarocket.jpg">
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-text-container">
+        <h3>NASA test-fires SLS engines</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
+          <a href="" target="blank">&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-img-container">
+        <img src="../pictures/WilliamThornton.jpg">
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-text-container">
+        <h3>Astronaut William Thornton dead</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
+          <a href="" target="blank">&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-container">
+    <container class="small-img-container">
+      <img src="../pictures/nicholaspatrick.jpg">
+    </container>
+    </div>
+
+    <div class="grid-container">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-img-container">
+        <img src="../pictures/shuttle.jpg">
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat <br><a href="" target="blank">&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-img-container">
+        <img src="../pictures/spiral.jpg">
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-img-container">
+        <img src="../pictures/tracycaldwell.jpg">
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-container">
+    <container class="small-img-container">
+      <img src="../pictures/SLSmegarocket.jpg">
+    </container>
+  </div>
+    <div class="grid-container">
+
+      <container class="small-text-container">
+        <h3>NASA test-fires SLS engines</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
+          <a href="" target="blank">&gt;</a>
+        </p>
+      </container>
+
+    </div>
+    <div class="grid-container">
+      <container class="small-img-container">
+        <img src="../pictures/WilliamThornton.jpg">
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-text-container">
+        <h3>Astronaut William Thornton dead</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
+          <a href="" target="blank">&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-img-container">
+        <img src="../pictures/sun.jpg">
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-img-container">
+        <img src="../pictures/nicholaspatrick.jpg">
+      </container>
+    </div>
+    <div class="grid-container">
+      <container class="small-text-container">
+        <h3>Small news</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+          eligendi, rerum placeat <br><a href="" target="blank">&gt;</a>
+        </p>
+      </container>
+    </div>
+    <div class="grid-container">
+    <container class="small-img-container">
+      <img src="../pictures/ISS640px.jpg">
+    </container>
+    </div>
+    <div class="grid-container">
+    <container class="small-text-container">
+      <h3>Small news</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+        eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
+      </p>
+    </container>
+    </div>
+    <div class="grid-container">
+    <container class="small-img-container">
+      <img src="../pictures/columbia.jpg">
+    </container>
+    </div>
+    <div class="grid-container">
+    <container class="small-text-container">
+      <h3>Small news</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+        eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
+      </p>
+    </container>
+    </div>
     </container>
   </section>
 
   <footer>
     <container class="footer-container">
-      <div class="text-container">
+      <div class="footer-text-container">
         <p>&copy; Pauline Andersson 2021</p>
       </div>
-      <div class="image-container">
+      <div class="footer-img-container">
         <img src="../pictures/logo.svg">
       </div>
     </container>
