declare come CSS variables and color palette

--- a/code/index.html
+++ b/code/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <title>Dev News</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <meta name="description" content="A dev new website" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header class="main-header">
+      <div class="main-wrapper">
+        <!-- LOGO -->
+
+        <!-- NAVBAR -->
+      </div>
     </header>
 
     <section class="big-news">
@@ -18,5 +23,6 @@
     <section class="">
       <!-- The other news  -->
     </section>
+    <footer></footer>
   </body>
 </html>
