--- a/code/index.html
+++ b/code/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+  
   <head>
     <meta charset="utf-8" />
     <title>Knitty&#9829News</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale: 1.0">
   </head>
+
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
