--- a/code/index.html
+++ b/code/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  
+
   <head>
     <meta charset="utf-8" />
     <title>Knitty&#9829News</title>
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <!-- Some kind of logo and navbar -->
     </header>
 
