--- a/code/index.html
+++ b/code/index.html
@@ -12,6 +12,13 @@
   <body>
     <header class="header">
       <!-- Some kind of logo and navbar -->
+
+      <div class="flex-container">
+        <div class="logo">    
+          <img src="KN_logo.svg" alt="logotype KnittyNews" />
+        </div>
+
+
     </header>
 
     <section class="big-news">
