add logo and hamburger menu

--- a/code/index.html
+++ b/code/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://use.fontawesome.com/bb61c0507d.js"></script>
     <meta charset="utf-8" />
     <title>Dev News</title>
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -10,9 +11,15 @@
   <body>
     <header class="main-header">
       <div class="main-wrapper">
-        <!-- LOGO -->
+        <div class="header-container">
+          <!-- LOGO -->
+          <a href="/" class="logo">
+            <img src="./assets/logo.svg" alt="" />
+          </a>
 
-        <!-- NAVBAR -->
+          <!-- NAVBAR -->
+          <a href="" class="menu"><i class="fa fa-bars"></i></a>
+        </div>
       </div>
     </header>
 
