--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Dentnews</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <div class="hamburger"> 
+        <a href="#">
+          <div></div>
+          <div></div>
+          <div></div>
+        </a>
+      </div>
+      <img src="photos/dentnews.png" alt="Dentnews logo">
+      <nav>
+        <a href="#">BREAKING NEWS</a> <!--Add anchor-->
+        <a href="#">ABOUT</a> <!--Add anchor-->
+        <a href="#">CONTACT</a> <!--Add anchor-->
+      </nav>
     </header>
 
     <section class="big-news">
