structure and style image and links in navigation bar

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
+<body>
+  <header>
+    <!-- logo and navbar -->
+    <nav>
+      <div class="nav-container">
+        <a class="logo">
+          <img src="logo.svg" alt="Technigo logo">
+        </a>
+        <ul>
+          <li>
+            <a href="">link 1</a>
+          </li>
+          <li>
+            <a href="">link 2</a>
+          </li>
+          <li>
+            <a href="">link 3 </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <!-- The big news section -->
+    <section class="big-news-container">
+      <div class="big-news-img">
+        <img>
+      </div>
+      <div class="big-news-text">
+        <h1></h1>
+        <p></p>
+      </div>
     </section>
-  </body>
+    <!-- Most recent news section -->
+    <section class="other-news-container">
+    </section>
+  </main>
+</body>
+
 </html>
