Added Big news and Ordinary news structure and styling

--- a/code/index.html
+++ b/code/index.html
@@ -21,12 +21,58 @@
 
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="big-news"> <!-- The big news content -->
+      <section class="container">
+        <img src="./logo.svg" alt="Image decription">
+        <div>
+        <h2>Text here</h2>
+        <p>Here will be a short text about our news. Here will be a short text about our news. Here will be a short text about our news</p>
+        <a href="">Read more</a>
+        </div>
+      </section>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="ordinary-news"> <!-- The other news  -->
+      <section class="container">
+        <div class="news">
+          <a href="">
+            <div class="each-news">
+              <img src="./logo.svg" alt="">
+              <div>
+                <h3>Headline text</h3>
+                <p>Here will be a short text about our news. Here will be a short text about our news. </p>
+              </div>
+            </div>  
+          </a>
+          <a href="">
+            <div class="each-news">
+              <img src="./logo.svg" alt="">
+              <div>
+                <h3>Headline text</h3>
+                <p>Here will be a short text about our news. Here will be a short text about our news. </p>
+              </div>
+            </div>  
+          </a>
+          <a href="">
+            <div class="each-news">
+              <img src="./logo.svg" alt="">
+              <div>
+                <h3>Headline text</h3>
+                <p>Here will be a short text about our news. Here will be a short text about our news. </p>
+              </div>
+            </div>  
+          </a>
+          <a href="">
+            <div class="each-news">
+              <img src="./logo.svg" alt="">
+              <div>
+                <h3>Headline text</h3>
+                <p>Here will be a short text about our news. Here will be a short text about our news. </p>
+              </div>
+            </div>  
+          </a>
+        </div>
+      </section>
     </section>
   </body>
 </html>
