--- a/code/index.html
+++ b/code/index.html
@@ -2,10 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Front End News</title>
+    <title>Front End Ninja 🥷🏻</title>
     <link rel="stylesheet" href="./style.css" /> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap" rel="stylesheet">
+    <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
     <!-- dont forget the meta tag for responsiveness -->
   </head>
 
@@ -15,25 +20,32 @@
 
     <header>
       <!-- Some kind of logo and navbar -->
-      <!-- <nav>
-        <a href="/html/">HTML</a>
-        <a href="/css/">CSS</a>
-        <a href="/js/">JavaScript</a>
-       -->
-        <img src="./logo.svg" alt="">
+      <nav>
+        <div>
+          <img src="./logo.svg" alt="">
+        </div>
+        <div>
+          <h1>Front End Ninja 🥷🏻</h1>
+        </div>
         <div class="hamburger">
           <div></div>
           <div></div>
           <div></div>
         </div>
-      <!-- </nav> -->
+
+        <div>
+          <a href="/html/">Home</a>
+          <a href="/css/">Search</a>
+          <a href="/js/">About</a>
+        </div>
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
       <div class="big-news-container">
         <div>
-          <img src="https://images.unsplash.com/photo-1566573208827-3aa9eadf0ed4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="">
+          <img src="https://images.unsplash.com/photo-1548092372-0d1bd40894a3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
         </div>
         <div>
           <h3>TITLE</h3>
@@ -47,11 +59,11 @@
       <div class="big-news-container">
 
         <div>
-          <img src="https://images.unsplash.com/photo-1503068733152-11689f7e6095?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" alt="">
+          <img src="https://images.unsplash.com/photo-1496171367470-9ed9a91ea931?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
         </div>
 
         <div>
-          <h3>TITLE</h3>
+          <h3>THE BEST HOME OFFICE</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
@@ -63,6 +75,18 @@
 
     <section class="small-news">
       <!-- The other news  -->
+      <div class="small-news-container">
+        <h3>TITLE</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+
+      <div class="small-news-container">
+        <h3>TITLE</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+
       <div class="small-news-container">
         <h3>TITLE</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
