--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,7 @@
           <h1 class="qtimes">Quarantine Times</h1>
           <nav>
             <a href="">Home</a> |
-            <a href="">Corona</a> |
+            <a href="">Covid-19</a> |
             <a href="">Health</a> |
             <a href="">Science</a>
           </nav>
