Created section for big news, with image, heading, and place for a link to a separate article page. Created section for other news with 7 divs for separate articles in one larger container, also with images, place for links, headings and paragraphs. Created classes in sections and div for styling.

--- a/code/index.html
+++ b/code/index.html
@@ -18,18 +18,86 @@
       </div>
       <img src="photos/dentnews.png" alt="Dentnews logo">
       <nav>
-        <a href="#">BREAKING NEWS</a> <!--Add anchor-->
-        <a href="#">ABOUT</a> <!--Add anchor-->
-        <a href="#">CONTACT</a> <!--Add anchor-->
+        <a href="#">BREAKING NEWS</a> <!--Add anchor to breaking news page->
+        <a href="#">ABOUT</a> <!--Add anchor to about.html-->
+        <a href="#">CONTACT</a> <!--Add anchor to contact page-->
       </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <a href="#"> <!--Add anchor to article page-->
+        <img src="photos/dentalvisit.jpg" alt="Picture of a man doing a dental check-up">
+        <div>
+          <p>BREAKING NEWS</p> <!--Add span to style?-->
+          <h1>Dental clinics not affected by the new pandemic law.</h1>
+          <p>What you need to know regarding the new law.</p>
+        </div>
+      </a>
     </section>
 
-    <section class="">
+    <section class="news-container">
       <!-- The other news  -->
+      <div class="news">
+        <a href="#"> <!--Add anchor to separate article page-->
+          <img src="photos/implants.jpg" alt="Picture of a dental implant">
+          <h3>Dental implants - what's new on the market?</h3>
+          <p>Here are the latest news regarding dental implants.</p>
+        </a>
+      </div>
+
+      <div class="news">
+        <a href="#"> <!--Add anchor to separate article page-->
+          <img src="photos/invisalign.jpg" alt="Picture of girl putting on invisalign braces">
+          <h3>Pros and cons of Invisalign braces</h3>
+          <p>Virtually invisible. Unlike traditional braces, the Invisalign system
+            doesn't use wires or brackets. </p>
+        </a>
+      </div>
+
+      <div class="news">
+        <a href="#"> <!--Add anchor to separate article page-->
+          <img src="photos/child.jpg" alt="Picture of a young child holding a toothbrush">
+          <h3>New guidelines in pediatric dentistry from January 2021</h3>
+          <p>Read the new guidelines.</p>
+        </a>
+      </div>
+
+      <div class="news">
+        <a href="#"> <!--Add anchor to separate article page-->
+          <img src="photos/dentalclinic.jpg" alt="Picture of a dental clinic">
+          <h3>COVID-19 - one year later</h3>
+          <p>How has the pandemic affected small private practices around the country?</p>
+        </a>
+      </div>
+
+      <div class="news">
+        <a href="#"> <!--Add anchor to separate article page-->
+          <img src="photos/electricscooter.jpg" alt="Picture of an electric scooter">
+          <h3>High increase of dental traumas due to the use of electric scooters</h3>
+          <p>Emergency clinics have seen a high increase of dental traumas since the broad launch
+            of electric scooters.</p>
+        </a>
+      </div>
+
+      <div class="news">
+        <a href="#"> <!--Add anchor to separate article page-->
+          <img src="photos/humble.jpg" alt="Picture of toothbrushed from Humble Co">
+          <h3>Humble Co</h3>
+          <p>For healthier people, on a healthier planet. Humble Co is leading an eco-friendly
+            revolution in dental hygiene products.</p>
+        </a>
+      </div>
+
+      <div class="news">
+        <a href="#"> <!--Add anchor to separate article page-->
+          <img src="photos/electrictoothbrush.jpg" alt="Picture of electric toothbrushes">
+          <h3>Top 10 best electric toothbrushes in 2021</h3>
+          <p>Read the test here.</p>
+        </a>
+      </div>
+
+
     </section>
   </body>
 </html>
