creating navbar, adding classes for nav, ending divs and header

--- a/code/index.html
+++ b/code/index.html
@@ -12,14 +12,21 @@
   <body>
     <header class="header">
       <!-- Some kind of logo and navbar -->
-
       <div class="flex-container">
         <div class="logo">    
           <img src="KN_logo.svg" alt="logotype KnittyNews" />
         </div>
 
-
+        <div class="nav">
+          <div class="nav-item"><a href="">About</a></div>
+          <div class="nav-item"><a href="">Archieve</a></div>
+          <div class="nav-item"><a href="">Forum</a></div>
+          <div class="nav-item"><a href="">Local</a></div>
+          <div class="nav-item"><a href="">Contact</a></div>
+       </div>
+      </div>
     </header>
+
 
     <section class="big-news">
       <!-- The big news content -->
