style navigationbar with flex

--- a/code/index.html
+++ b/code/index.html
@@ -11,23 +11,19 @@
 <body>
   <header>
     <!-- logo and navbar -->
+    <img class="logo" src="logo.svg" alt="logo">
     <nav>
-      <div class="nav-container">
-        <a class="logo">
-          <img src="logo.svg" alt="Technigo logo">
-        </a>
-        <ul>
-          <li>
-            <a href="">link 1</a>
-          </li>
-          <li>
-            <a href="">link 2</a>
-          </li>
-          <li>
-            <a href="">link 3 </a>
-          </li>
-        </ul>
-      </div>
+      <ul class="nav-links">
+        <li>
+          <a href="#">Articles</a>
+        </li>
+        <li>
+          <a href="#">Magazine</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
     </nav>
   </header>
   <main>
