--- a/code/index.html
+++ b/code/index.html
@@ -44,8 +44,26 @@
     
     </div>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="other-news">
+      <!-- The other news -->
+      <div class="other-news-item">
+        <img id="first" src="https://images.unsplash.com/photo-1554168396-aab725fa9d34?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80" />
+        <a href=""><h3>Colorpicking</h3></a>
+      </div>
+      <div class="other-news-item">
+        <img id="second" src="https://images.unsplash.com/photo-1562469162-c17fc5155156?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" />
+        <a href=""><h3>What's your next project?</h3></a>
+      </div>
+      <div class="other-news-item">
+        <img id="third" src="https://images.unsplash.com/photo-1513890333407-6f85205e8ef2?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1500&q=80" />
+        <a href=""><h3>Yarnweight and structure</h3></a>
+      </div>
+      <div class="other-news-item">
+        <img id="fourth" src="https://images.unsplash.com/photo-1569745637705-76458b6bae7d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" />
+        <a href=""><h3>Tools: Now is the time to gear up!</h3></a>
+      </div>
     </section>
+  
+
   </body>
 </html>
