creating footer element

--- a/code/index.html
+++ b/code/index.html
@@ -64,6 +64,9 @@
       </div>
     </section>
   
-
+    <footer class="footer">
+      <p>Knitty News | &#169 2021</p>
+    </footer>
+    
   </body>
 </html>
