--- a/code/index.html
+++ b/code/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <h1>TEST</h1>
     </header>
 
     <section class="big-news">
