--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,8 @@
     <header>
       <!-- Some kind of logo and navbar -->
       <h1>TEST</h1>
+      <h2>TEST 2
+      </h2>
     </header>
 
     <section class="big-news">
