--- a/code/index.html
+++ b/code/index.html
@@ -12,6 +12,9 @@
       <h1>TEST</h1>
       <h2>TEST 2
       </h2>
+      <h3>
+        TEST 3
+      </h3>
     </header>
 
     <section class="big-news">
