Added a placeholder image, added html structure and placeholder text, added media queries

--- a/code/index.html
+++ b/code/index.html
@@ -9,16 +9,79 @@
   </head>
   <body>
     <header>
+      <div class=logo>
+        <img src="logo.svg">
+      </div>
+      
       Crafty Ideas E-zine
+
+      <nav>
+        <a href="/html/">HTML</a> |
+        <a href="/css/">CSS</a> |
+        <a href="/js/">JavaScript</a> |
+        <a href="/python/">Python</a>
+      </nav>
+
       <!-- Some kind of logo and navbar -->
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+
+      <figure>
+        <img src="/images/nalbinding.jpg" alt="Nalbinding">
+        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+      </figure>
+
+      <article>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type 
+        specimen book. It has survived not only five centuries, but also the leap into 
+        electronic typesetting, remaining essentially unchanged. It was popularised in 
+        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+        and more recently with desktop publishing software like Aldus PageMaker including 
+        ons of Lorem Ipsum.
+      </article>
     </section>
 
-    <section class="">
+    <section class="small-news">
       <!-- The other news  -->
+      <figure>
+        <img src="/images/nalbinding.jpg" alt="Nalbinding">
+        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/images/nalbinding.jpg" alt="Nalbinding">
+        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/images/nalbinding.jpg" alt="Nalbinding">
+        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/images/nalbinding.jpg" alt="Nalbinding">
+        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/images/nalbinding.jpg" alt="Nalbinding">
+        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+      </figure>
+      
+      <figure>
+        <img src="/images/nalbinding.jpg" alt="Nalbinding">
+        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/images/nalbinding.jpg" alt="Nalbinding">
+        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+      </figure>
+
     </section>
   </body>
 </html>
