--- a/code/index.html
+++ b/code/index.html
@@ -2,20 +2,91 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width-device-width, initial-scale-1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
+    <section class="flex-parent">
+      <div class="flex-child">
+     <h1>Daily Sports News</h1>
+      </div>
+      <div class="flex-logo">
+        <img src="News_logo.png">
+      </div>
+      <div class="flex-child1">
+      <nav>
+<a href="">Ice Hockey</a>
+<a href="">Football</a>
+<a href="">Winter Sports</a>
+<a href="">Other Sports</a>
+
+      </nav>
+      </div>
+  </section>
+   
       <!-- Some kind of logo and navbar -->
-    </header>
+   
 
     <section class="big-news">
+      <div class="big-new-img">
       <!-- The big news content -->
+<img src="icehockey-news-site.jpg" alt="Ice hockey goalie">
+      </div>
+      <div class="big-news-text">
+        <h2> Season finally starts!</h2>
+        <p>After months of eager waiting, NHL season has finally started.
+          <br>
+          Wednesday, the first games of the years were played in United States of America.
+          <br>
+          Worth mentioning to an Swedish audience, is that several of the players
+          <br> 
+          from Sweden had successful evenings.
+          <br>
+          <a href="">Continue to article...</a>
+        </p>
+
+      </div>
     </section>
 
-    <section class="">
+    <section class="grid-container">
+      <div class="grid-item1"> 
+        <img src="football_arena.jpg" alt="Football arena">
+        <h3>Real Madrid defeated in Supercopa de Espana. </h3>
+          <a href="">Continue reading...</a>
+      </div>
+      <div class="grid-item2">
+        <img src="tour-de-ski.jpg" alt="Skiing competition">
+        <h3>Bolsjunov outstanding winner in Tour de Ski 2021.</h3>
+          <a href="">Continue reading...</a>
+      </div>
+      <div class="grid-item3">
+        <img src="golf-ball.jpg" alt="Golf ball">
+        <h3>Sörenstam receives Presidential Medal of Freedom.</h3>
+          <a href="">Continue reading...</a>
+      </div>
+      <div class="grid-item4">
+        <img src="olympics.jpg" alt="Olympic rings">
+        <h3>Japanese uncertainty whether the Olympics can take place.</h3>
+          <a href="">Continue reading...</a>
+      </div>
+      <div class="grid-item5">
+        <img src="handball-tournament.jpg" alt="Handball">
+        <h3>Sweden gets off with a great start in the Handball World Championship</h3>
+          <a href="">Continue reading...</a>
+      </div>
+      <div class="grid-item6">
+        <img src="floorball.jpg" alt="Floorball">
+        <h3>What will happen with the floorball season? Soon to be found out.</h3>
+          <a href="">Continue reading...</a>
+      </div>
+      <div class="grid-item7">
+        <img src="tennis.jpg" alt="Tennis">
+        <h3>Australian Open is causing frustration among Australian citizens.</h3>
+          <a href="">Continue reading...</a>
+      </div>
+
       <!-- The other news  -->
     </section>
   </body>
