--- a/code/index.html
+++ b/code/index.html
@@ -21,7 +21,7 @@
                 <li><a>america</a></li><br>
                 <li><a>africa</a></li><br>
                 <li><a>europe</a></li><br>
-                <li><a>africa</a></li><br>
+                <li><a>asia</a></li><br>
             </ul>
         </li>
 
@@ -53,7 +53,7 @@
         
       </ul>
 
-      <h1>daily news</h1>
+      <img src="./logo.png"><h1>daily news</h1>
 
       <a href="#" class="fa fa-facebook"></a>
       <a href="#" class="fa fa-twitter"></a>
@@ -90,6 +90,6 @@
     </section>
 
     <footer class="footer"><p>dailynews.com © The Daily News</p></footer>
-    
+
   </body>
 </html>
